
        Fixes a regression test, but exposes the failure of another due to the
        lack of getters and setters.

        * kjs/nodes.cpp:
        (KJS::ConstDeclNode::emitCodeSingle):
        (KJS::ConstDeclNode::emitCode):
        (KJS::ConstStatementNode::emitCode):
        (KJS::VarStatementNode::emitCode):
        * kjs/nodes.h:

2008-04-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Print a CRASH statement when crashing, so test failures are not a
        mystery.

        * kjs/testkjs.cpp:
        (handleCrash):
        (main):

2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Geoffrey Garen.

        Bug 18716: SQUIRRELFISH: typeof should return undefined for an undefined variable reference
        <https://bugs.webkit.org/show_bug.cgi?id=18716>

        This fixes 2 more regression tests.

        * kjs/nodes.cpp:
        (KJS::TypeOfResolveNode::emitCode):

2008-04-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Put the callee in the call frame.
        
        Necessary in order to support "arguments" and "arguments.callee".

        Also fixes a latent GC bug, where an executing function could be
        subject to GC if the register holding it were overwritten. Here's
        an example that would have caused problems:
        
        function f()
        {
            // Flood the machine stack to eliminate any old pointers to f.
            g.call({});
            
            // Overwrite f in the register file.
            f = 1;

            // Force a GC.
            for (var i = 0; i < 5000; ++i) {
                ({});
            }
            
            // Welcome to crash-ville.
        }

        function g()
        {
        }

        f();

        * VM/Machine.h: Changed the order of arguments to
        execute(FunctionBodyNode*...) to match the other execute functions.